# hybrid_lora_parallel

./: .gitignore  README.md  analyzer.py  experiment_results.csv  fp_analyzer.py  fp_plotter.py  fp_pp_ablation_results.csv  fp_toy_fsdp_dtensor_results.csv  plotter.py  pyproject.toml  requirements.txt  submit.py
fp_data/pp_ablation/: pp_split12_sl4096_mbs1_report.txt  pp_split12_sl4096_mbs2_report.txt  pp_split12_sl4096_mbs4_report.txt  pp_split14_sl4096_mbs1_report.txt  pp_split14_sl4096_mbs2_report.txt  pp_split14_sl4096_mbs4_report.txt  pp_split16_sl1024_mbs4_report.txt  pp_split16_sl1536_mbs4_report.txt  pp_split16_sl2048_mbs4_report.txt  pp_split16_sl2560_mbs4_report.txt  pp_split16_sl3172_mbs4_report.txt  pp_split16_sl3584_mbs4_report.txt  pp_split16_sl4096_mbs1_report.txt  pp_split16_sl4096_mbs2_report.txt  pp_split16_sl4096_mbs4_report.txt  pp_split16_sl4608_mbs4_report.txt  pp_split16_sl512_mbs4_report.txt  pp_split17_sl4096_mbs1_report.txt  pp_split17_sl4096_mbs2_report.txt  pp_split17_sl4096_mbs4_report.txt  pp_split18_sl4096_mbs1_report.txt  pp_split18_sl4096_mbs2_report.txt  pp_split18_sl4096_mbs4_report.txt
fp_data/toy_fsdp_dtensor/: fsdp_ac0_sl1024_mbs4_report.txt  fsdp_ac0_sl2048_mbs4_report.txt  fsdp_ac0_sl3172_mbs4_report.txt  fsdp_ac0_sl4096_mbs4_report.txt  fsdp_ac1_sl1024_mbs4_report.txt  fsdp_ac1_sl2048_mbs4_report.txt  fsdp_ac1_sl3172_mbs4_report.txt  fsdp_ac1_sl4096_mbs4_report.txt
scripts/: run.sh
scripts/baseline_ft/: fft.sh  loraft.sh
scripts/ddp/: run.sh
test/: test_fa2.py
writeup/: PROPOSAL.md  README.md
writup/: PROPOSAL.md
(+54 files in other folders)
